syntax = "proto3";

package auth;

option go_package = "github.com/radmickey/money-control/backend/proto/auth";

import "google/protobuf/timestamp.proto";

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc GoogleAuth(GoogleAuthRequest) returns (AuthResponse);
  rpc TelegramAuth(TelegramAuthRequest) returns (AuthResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);
  rpc GetProfile(GetProfileRequest) returns (User);
  rpc UpdateProfile(UpdateProfileRequest) returns (User);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message User {
  string id = 1;
  string email = 2;
  string google_id = 3;
  string base_currency = 4;
  string first_name = 5;
  string last_name = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  int64 telegram_id = 9;
  string telegram_username = 10;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  string base_currency = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message GoogleAuthRequest {
  string code = 1;
  string redirect_uri = 2;
}

message TelegramAuthRequest {
  string init_data = 1;
}

message AuthResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_in = 4;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message GetProfileRequest {
  string user_id = 1;
}

message UpdateProfileRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string base_currency = 4;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
}

message LogoutRequest {
  string user_id = 1;
  string refresh_token = 2;
}

message LogoutResponse {
  bool success = 1;
}

